fixing logo being squished

--- a/photogallery.css
+++ b/photogallery.css
@@ -25,7 +25,7 @@
 }
 
 img {
-    width: 250px;
+    width: 220px;
     height: 90px;
     margin: 0;
     padding: 0;
